--- a/package.json
+++ b/package.json
@@ -12,7 +12,14 @@
     "react": "^19.2.3",
     "lucide-react": "^0.562.0",
     "react-dom": "^19.2.3",
-    "recharts": "^3.6.0"
+    "recharts": "^3.6.0",
+    "axios": "^1.13.2",
+    "process": "^0.11.10",
+    "ws": "^8.19.0",
+    "dotenv": "^17.2.3",
+    "ethers": "^6.16.0",
+    "chalk": "^5.6.2",
+    "@polymarket/clob-client": "^5.2.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
