--- a/backend/package.json
+++ b/backend/package.json
@@ -2,16 +2,17 @@
   "name": "panchopolybot-execution-engine",
   "version": "1.0.0",
   "description": "Latency arbitrage bot for Polymarket vs Binance",
-  "main": "bot.js",
+  "main": "bot.mjs",
+  "type": "module",
   "scripts": {
-    "start": "node bot.js"
+    "start": "node bot.mjs"
   },
   "dependencies": {
     "ethers": "^6.11.0",
     "@polymarket/clob-client": "^4.0.0",
     "ws": "^8.16.0",
     "dotenv": "^16.4.1",
-    "chalk": "^4.1.2",
+    "chalk": "^5.3.0",
     "axios": "^1.6.0"
   }
 }
