feat: Enhance dashboard and backend with new features
Introduces several improvements to the PanchoPolyBot Command Center. The dashboard now supports displaying error messages and handling new market slugs. The backend engine has been refactored to use `engine.mjs` as its main entry point and includes enhanced configuration loading and validation for private keys and API keys. Additionally, the WebSocket server setup in the backend has been improved for better connection management.

--- a/backend/package.json
+++ b/backend/package.json
@@ -2,10 +2,10 @@
   "name": "panchopolybot-execution-engine",
   "version": "1.0.0",
   "description": "Latency arbitrage bot for Polymarket vs Binance",
-  "main": "bot.mjs",
+  "main": "engine.mjs",
   "type": "module",
   "scripts": {
-    "start": "node bot.mjs"
+    "start": "node engine.mjs"
   },
   "dependencies": {
     "ethers": "^6.11.0",
