refactor: Rename engine to bot and update scripts
Renames the main executable file from `engine.mjs` to `bot.mjs`. Updates `package.json` and UI console messages to reflect this change. This standardizes the naming and simplifies the startup commands.

--- a/backend/package.json
+++ b/backend/package.json
@@ -2,10 +2,10 @@
   "name": "panchopolybot-execution-engine",
   "version": "1.0.0",
   "description": "Latency arbitrage bot for Polymarket vs Binance",
-  "main": "engine.mjs",
+  "main": "bot.mjs",
   "type": "module",
   "scripts": {
-    "start": "node engine.mjs"
+    "start": "node bot.mjs"
   },
   "dependencies": {
     "ethers": "^6.11.0",
