feat: Rename project to System Halted and implement shutdown sequence
Updates the project name, title, and metadata to reflect the termination of the PanchoPolyBot project. Implements a visual shutdown sequence with terminal-like logging to signify the project's end.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "panchopolybot-command-center",
+  "name": "system-halted",
   "private": true,
   "version": "0.0.0",
   "type": "module",
