feat: Rename project to Polymarket Quant Terminal
Updates project name, title, and metadata to reflect the new application name "Polymarket Quant Terminal". This change consolidates the project's identity and clarifies its purpose as a control plane for automated prediction market arbitrage.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "system-halted",
+  "name": "polymarket-quant-terminal",
   "private": true,
   "version": "0.0.0",
   "type": "module",
