--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "dotenv": "^17.2.3",
     "ethers": "^6.16.0",
     "chalk": "^5.6.2",
-    "@polymarket/clob-client": "^5.2.0"
+    "@polymarket/clob-client": "^5.2.0",
+    "@supabase/supabase-js": "2.39.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
