feat(bot): Refactor bot VPS into modular services
This commit refactors the Polymarket Bot VPS execution engine to use a more modular and service-oriented architecture.

Key changes include:
- Renaming the package to `polymarket-bot-vps` for clarity.
- Centralizing configuration loading and validation in `src/config/env.ts`.
- Introducing dedicated services for `MarketRegistry`, `HeartbeatService`, and `Supabase logging`.
- Implementing a `ControlLoop` to manage the bot's overall state based on Supabase configurations.
- Adding a `MarketLoop` class to represent individual market processing units (currently a placeholder).
- Refactoring error handling and process termination for cleaner shutdowns.
- Updating dependencies and adding necessary development tools like `ts-node`.
- Defining TypeScript interfaces for Supabase table structures (`BotControl`, `Market`, `BotEvent`).
- Adding a basic console logger utility.

--- a/bot/package.json
+++ b/bot/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "polymarket-bot-engine",
-  "version": "1.0.0",
-  "description": "VPS-side execution engine for Polymarket automated trading",
+  "name": "polymarket-bot-vps",
+  "version": "0.1.0",
+  "description": "VPS execution engine for Polymarket arbitrage",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
@@ -10,13 +10,11 @@
   },
   "dependencies": {
     "dotenv": "^16.3.1",
-    "ethers": "^6.8.0",
-    "@supabase/supabase-js": "^2.38.4",
-    "@polymarket/clob-client": "^4.0.0",
-    "axios": "^1.6.0"
+    "@supabase/supabase-js": "^2.38.4"
   },
   "devDependencies": {
     "typescript": "^5.2.2",
+    "ts-node": "^10.9.1",
     "@types/node": "^20.8.9"
   }
 }
