--- a/bot/package.json
+++ b/bot/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polymarket-bot-vps",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "VPS execution engine for Polymarket arbitrage",
   "main": "dist/index.js",
   "scripts": {
@@ -11,8 +11,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "@supabase/supabase-js": "^2.38.4",
-    "axios": "^1.6.0",
-    "ethers": "^6.11.0"
+    "axios": "^1.6.0"
   },
   "devDependencies": {
     "typescript": "^5.2.2",
