feat: Implement Polymarket CLOB trading and risk management
Integrates the CLOB client for interacting with the Polymarket order book and establishes a robust risk management system.

Key changes include:
- Adding necessary dependencies for CLOB interaction (ethers, @polymarket/clob-client).
- Enhancing configuration to include trading credentials (Private Key, API keys).
- Implementing a `PolymarketService` for token resolution and order placement.
- Introducing a `RiskGovernor` class with hardcoded limits for global and per-market exposure.
- Modifying the `MarketLoop` to incorporate risk checks before attempting trades.
- Updating `env.ts` to validate new trading-related environment variables.
- Version bump to 0.3.0 to reflect significant feature additions.

--- a/bot/package.json
+++ b/bot/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polymarket-bot-vps",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "description": "VPS execution engine for Polymarket arbitrage",
   "main": "dist/index.js",
   "scripts": {
@@ -11,7 +11,9 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "@supabase/supabase-js": "^2.38.4",
-    "axios": "^1.6.0"
+    "axios": "^1.6.0",
+    "ethers": "^6.11.0",
+    "@polymarket/clob-client": "^4.0.0"
   },
   "devDependencies": {
     "typescript": "^5.2.2",
