--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "ethers": "^6.16.0",
     "chalk": "^5.6.2",
     "@polymarket/clob-client": "^5.2.0",
-    "@supabase/supabase-js": "2.39.0"
+    "@supabase/supabase-js": "2.39.0",
+    "@google/genai": "^1.35.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
